Update ch 0 to add SpaceX image Added image styling CSS

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -130,6 +130,22 @@ ol li, ul li{
 img[src*=gif] {
 	border: 1px solid black;
 }
+img {
+	width: 50%!important;
+	height: 50%!important;
+}
+.img-small {
+	width: 25%!important;
+	height: 25%!important;
+}
+.img-medium {
+	width: 75%!important;
+	height: 75%!important;
+}
+.img-large {
+	width: 95%!important;
+	height: 95%!important;
+}
 
 h5, h6 {
 	letter-spacing: .01rem;
