--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -133,6 +133,7 @@ img[src*=gif] {
 img {
 	width: 50%!important;
 	height: 50%!important;
+	border: 1px solid #CCC;
 }
 .img-small {
 	width: 25%!important;
