--- a/css/style.css
+++ b/css/style.css
@@ -568,7 +568,8 @@ img[src*=gif] {
 
 img {
   width: 50% !important;
-  height: 50% !important; }
+  height: 50% !important;
+  border: 1px solid #CCC; }
 
 .img-small {
   width: 25% !important;
